Add several unit tests for pytorch equivalence, and fix a few issues with the same. Note: this is a breaking change for users of  jaxtorch.nn.modules that have trained modules relying on the previous behaviour of GELU, which now uses the exact algorithm by default, same as pytorch. If there's any such person. The rest of the fixes change the default initialization only.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,8 @@ path = "jaxtorch/_version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["jaxtorch"]
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
