Remove the monkeypatching module entirely.
This has been the most brittle part of the library, and not really
worth it just for some syntactic sugar (that doesn't even work with
lsp/autocomplete), as nice as having access to (array).sqrt() and so
on would be.

Also, cleanup and fix a bunch of linter complaints, and remove
deprecated Module functions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,13 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
 ]
 
-dependencies = ["torch", "jax", "einops"]
+dependencies = [
+    "jax", 
+    "einops"
+]
+
+[dependency-groups]
+test = ["pytest", "torch", "cbor2", "jax[cuda12]"]
 
 [project.urls]
 Homepage = "https://github.com/nshepperd/jaxtorch"
